--- a/src/balkon.html
+++ b/src/balkon.html
@@ -400,7 +400,7 @@
 			</div>
 		</section>
 
-		<section class="gl gl_tw">
+		<!-- <section class="gl gl_tw">
 			<div class="container">
 				<div class="gl__inner">
 					<h2>примеры отделки балкона и лоджии</h2>
@@ -494,7 +494,7 @@
 					<div class="swiper-button-next js-gl-slider2-next"></div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="equipment equipment_fr">
 			<div class="equipment__inner tabs_wrapper">
 				<div class="equipment__top">
@@ -505,8 +505,8 @@
 								<li class="active" id="equipment1">Отделка</li>
 								<li id="equipment2">Утепление</li>
 								<li id="equipment3">Электрика</li>
-								<li id="equipment4">Встроенная мебель</li>
-								<li id="equipment5">Основа под остекление</li>
+								<!-- <li id="equipment4">Встроенная мебель</li>
+								<li id="equipment5">Основа под остекление</li> -->
 							</ul>
 						</div>
 					</div>
@@ -648,7 +648,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="tab_content" data-tab="equipment4">
+					<!-- <div class="tab_content" data-tab="equipment4">
 						<div class="equipment__bg">
 							<img src="images/equipment-bg2-3.jpg" />
 						</div>
@@ -705,8 +705,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="tab_content" data-tab="equipment5">
+					</div> -->
+					<!-- <div class="tab_content" data-tab="equipment5">
 						<div class="equipment__bg">
 							<img src="images/equipment-bg2-4.jpg" />
 						</div>
@@ -742,11 +742,11 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
-		<section class="catalog catalog_fr">
+		<!-- <section class="catalog catalog_fr">
 			<div class="container">
 				<div class="catalog__inner">
 					<h2>Стоимость типовых решений</h2>
@@ -902,7 +902,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="ab ab_fr ab_fv">
 			<div class="ab__bg">
 				<img src="images/ab-bg3.jpg" />
@@ -987,7 +987,7 @@
 									всей продукции
 								</div>
 								<div class="prev__tx">
-									Гарантия на окна и монтаж 3 года
+									Гарантия на окна и монтаж 5 лет
 								</div>
 							</div>
 						</div>
@@ -1087,16 +1087,16 @@
 			<div class="container">
 				<div class="reviews__inner tabs_wrapper">
 					<ul class="tabs">
-						<li class="active" id="reviews1">
+						<!-- <li  id="reviews1">
 							Участие в ТВ программах
-						</li>
-						<li id="reviews2">Отзывы наших клиентов</li>
-						<li id="reviews3">Вопросы про окна KBE</li>
+						</li> -->
+						<li class="active" id="reviews2">Отзывы наших клиентов</li>
+						<!-- <li id="reviews3">Вопросы про окна KBE</li> -->
 						<li id="reviews4">Нам доверяют</li>
 					</ul>
 
 					<div class="tabs_container">
-						<div class="tab_content active" data-tab="reviews1">
+						<!-- <div class="tab_content " data-tab="reviews1">
 							<div class="reviews__content">
 								<div class="reviews__slider js-reviews-slider1">
 									<div class="swiper-wrapper">
@@ -1105,16 +1105,10 @@
 										</div>
 									</div>
 								</div>
-
-								<!--
-	            <div class="swiper-button-prev js-reviews-slider-prev1"></div>
-	            <div class="swiper-button-next js-reviews-slider-next1"></div>
-	            <div class="swiper-pagination js-reviews-slider-pagination1"></div>
--->
 							</div>
-						</div>
+						</div> -->
 
-						<div class="tab_content" data-tab="reviews2">
+						<div class="tab_content active" data-tab="reviews2">
 							<div class="reviews__content">
 								<div class="reviews__slider js-reviews-slider2">
 									<div class="swiper-wrapper">
@@ -1409,7 +1403,7 @@
 							</div>
 						</div>
 
-						<div class="tab_content" data-tab="reviews3">
+						<!-- <div class="tab_content" data-tab="reviews3">
 							<div class="reviews__content">
 								<div class="reviews__slider js-reviews-slider3">
 									<div class="faq_item">
@@ -1497,7 +1491,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="tab_content" data-tab="reviews4">
 							<div class="reviews__content">
@@ -1607,7 +1601,7 @@
 			</div>
 		</section>
 
-		<section class="gallery">
+		<!-- <section class="gallery">
             <div class="gallery__inner">
                 <div class="gallery__title"><span>Фотогалерея</span></div>
                 <div class="gallery__slider js-gallery-slider">
@@ -1663,7 +1657,7 @@
                     <div class="swiper-button-next js-gallery-slider-next"></div>
                 </div>
             </div>
-        </section>
+        </section> -->
 		<section class="info">
 			<div class="info__bg">
 				<img src="images/info-bg.jpg" />
@@ -1789,7 +1783,7 @@
                         </div>
                     </div>
                     <div class="footer__b">
-                        <div class="footer__i">
+                        <!-- <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Окна для квартир</div>
 
@@ -1830,8 +1824,8 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="footer__i">
+                        </div> -->
+                        <!-- <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Остекление коттеджей</div>
 
@@ -1854,16 +1848,16 @@
 
                                 <div class="footer__group">
                                     <ul>
-                                        <!-- <li>
+                                        <li>
                                             <a href="design/index.htm">Дизайнерам и архитекторам</a>
-                                        </li> -->
+                                        </li>
                                         <li>
                                             <a href="about.html">Корпоративным клиентам </a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Контакты</div>
@@ -1879,7 +1873,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="footer__item">
+                          <!--   <div class="footer__item">
                                 <div class="footer__title">О компании</div>
 
                                 <div class="footer__group">
@@ -1892,7 +1886,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
