--- a/src/index.html
+++ b/src/index.html
@@ -1279,7 +1279,7 @@
                                 <li class="active" id="equipment1">Фурнитура</li>
                                 <li id="equipment2">Стеклопакет</li>
                                 <li id="equipment3">Цветной профиль</li>
-                                <li id="equipment4">Аксессуары</li>
+                               <!--  <li id="equipment4">Аксессуары</li> -->
                             </ul>
                         </div>
                     </div>
@@ -1369,7 +1369,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab_content" data-tab="equipment4">
+                    <!-- <div class="tab_content" data-tab="equipment4">
                         <div class="equipment__bg">
                             <img src="images/equipment-bg1-1.jpg" />
                         </div>
@@ -1400,7 +1400,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -1445,7 +1445,7 @@
                                     Гарантия качества<br />
                                     всей продукции
                                 </div>
-                                <div class="prev__tx">Гарантия на окна и монтаж 3 года</div>
+                                <div class="prev__tx">Гарантия на окна и монтаж 5 лет</div>
                             </div>
                         </div>
                         <div class="prev__cell">
@@ -1518,7 +1518,7 @@
             </div>
         </section>
 
-        <section class="ab">
+        <!-- <section class="ab">
             <div class="ab__bg">
                 <img src="images/ab-bg.jpg" />
             </div>
@@ -1546,20 +1546,20 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="reviews">
             <div class="container">
                 <div class="reviews__inner tabs_wrapper">
                     <ul class="tabs">
-                        <li class="active" id="reviews1">Участие в ТВ программах</li>
-                        <li id="reviews2">Отзывы наших клиентов</li>
-                        <li id="reviews3">Вопросы про окна KBE</li>
+                        <!-- <li class="active" id="reviews1">Участие в ТВ программах</li> -->
+                        <li class="active" id="reviews2">Отзывы наших клиентов</li>
+                        <!-- <li id="reviews3">Вопросы про окна KBE</li> -->
                         <li id="reviews4">Нам доверяют</li>
                     </ul>
 
                     <div class="tabs_container">
-                        <div class="tab_content active" data-tab="reviews1">
+                       <!--  <div class="tab_content active" data-tab="reviews1">
                             <div class="reviews__content">
                                 <div class="reviews__slider js-reviews-slider1">
                                     <div class="swiper-wrapper">
@@ -1568,16 +1568,10 @@
                                         </div>
                                     </div>
                                 </div>
-
-                                <!--
-	            <div class="swiper-button-prev js-reviews-slider-prev1"></div>
-	            <div class="swiper-button-next js-reviews-slider-next1"></div>
-	            <div class="swiper-pagination js-reviews-slider-pagination1"></div>
--->
                             </div>
-                        </div>
+                        </div> -->
 
-                        <div class="tab_content" data-tab="reviews2">
+                        <div class="tab_content active" data-tab="reviews2">
                             <div class="reviews__content">
                                 <div class="reviews__slider js-reviews-slider2">
                                     <div class="swiper-wrapper">
@@ -1672,7 +1666,7 @@
                             </div>
                         </div>
 
-                        <div class="tab_content" data-tab="reviews3">
+                        <!-- <div class="tab_content" data-tab="reviews3">
                             <div class="reviews__content">
                                 <div class="reviews__slider js-reviews-slider3">
                                     <div class="faq_item">
@@ -1716,7 +1710,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="tab_content" data-tab="reviews4">
                             <div class="reviews__content">
@@ -1800,7 +1794,7 @@
             </div>
         </section>
 
-        <section class="gallery">
+       <!--  <section class="gallery">
             <div class="gallery__inner">
                 <div class="gallery__title"><span>Фотогалерея</span></div>
                 <div class="gallery__slider js-gallery-slider">
@@ -1857,7 +1851,7 @@
                 </div>
             </div>
         </section>
-
+ -->
         <section class="info">
             <div class="info__bg">
                 <img src="images/info-bg.jpg" />
@@ -1915,7 +1909,7 @@
                         </div>
                     </div>
                     <div class="footer__b">
-                        <div class="footer__i">
+                       <!--  <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Окна для квартир</div>
 
@@ -1956,8 +1950,8 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
-                        <div class="footer__i">
+                        </div> -->
+                       <!--  <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Остекление коттеджей</div>
 
@@ -1980,16 +1974,16 @@
 
                                 <div class="footer__group">
                                     <ul>
-                                        <!-- <li>
+                                        <li>
                                             <a href="design/index.htm">Дизайнерам и архитекторам</a>
-                                        </li> -->
+                                        </li>
                                         <li>
                                             <a href="about.html">Корпоративным клиентам </a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="footer__i">
                             <div class="footer__item">
                                 <div class="footer__title">Контакты</div>
@@ -2005,7 +1999,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="footer__item">
+                            <!-- <div class="footer__item">
                                 <div class="footer__title">О компании</div>
 
                                 <div class="footer__group">
@@ -2018,7 +2012,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
