--- a/src/about.html
+++ b/src/about.html
@@ -152,16 +152,16 @@
 
 					<div class="header__b2">
 						<a href="index.htm" title="О компании"
-							><img src="../images/mini_ico1.png"
+							><img src="/images/mini_ico1.png"
 						/></a>
 						<a
 							href="#call"
 							class="open-modal"
 							title="Заказать звонок"
-							><img src="../images/mini_ico2.png"
+							><img src="/images/mini_ico2.png"
 						/></a>
-						<a href="../contacts/index.htm" title="Контакты"
-							><img src="../images/mini_ico3.png"
+						<a href="/contacts/index.htm" title="Контакты"
+							><img src="/images/mini_ico3.png"
 						/></a>
 					</div>
 
