--- a/src/design.html
+++ b/src/design.html
@@ -1406,9 +1406,7 @@
 						<div class="footer__time">
 							ежедневно с 9:00 до 21:00
 						</div>
-						<a href="tel:+74953741400" class="footer__tel"
-							>+7 495 374 14 00</a
-						>
+						<a href="tel:+79616714444" class="footer__tel">+7 961 671 44 44</a>
 						<a href="mailto:info@kbe-group.ru" class="footer__mail"
 							>info@kbe-group.ru</a
 						>
